Imrpoved code structure